[gd_scene load_steps=75 format=3 uid="uid://cjpypl5wt425g"]

[ext_resource type="Script" uid="uid://c2jjwjyvarali" path="res://menu.gd" id="1_ylpcl"]
[ext_resource type="Texture2D" uid="uid://bskf01sb4isus" path="res://Backgrounds/Ruins_BG.png" id="2_hcwhg"]
[ext_resource type="FontFile" uid="uid://bpuxop7yuewwq" path="res://Deadtoast Demo.ttf" id="2_ylpcl"]
[ext_resource type="AudioStream" uid="uid://c6wgf1ow5hejy" path="res://Music_Teriyaki-Wings/Remade_MainMenuBGM.wav" id="4_cx167"]
[ext_resource type="AudioStream" uid="uid://vsls1fjsl6xo" path="res://Sound Effects/Button_Press.wav" id="5_dolsu"]
[ext_resource type="Texture2D" uid="uid://bujhr4bfxk7qi" path="res://Backgrounds/black bg.jpg" id="6_dlksc"]
[ext_resource type="AudioStream" uid="uid://df5mxhvilisc2" path="res://Sound Effects/Hover_Over_Button.wav" id="6_n4eug"]
[ext_resource type="Texture2D" uid="uid://dcfn3rtcpw1p" path="res://UI Main Menu/MainMenu_UI_BG.png" id="7_hcwhg"]
[ext_resource type="FontFile" uid="uid://l8v3nhp1pg2f" path="res://Fonts/Butler_Medium.otf" id="9_elwp8"]
[ext_resource type="Texture2D" uid="uid://k4iuam1056bm" path="res://Assets/Animal Rep (Creds)/Crow_AnimationSheet.png" id="10_xucoo"]
[ext_resource type="Texture2D" uid="uid://ewx01jfpy8b3" path="res://Assets/Animal Rep (Creds)/Cat_AnimationSheet.png" id="11_ktlje"]
[ext_resource type="Texture2D" uid="uid://chc511j2eauh6" path="res://Assets/Animal Rep (Creds)/Fox_AnimationSheet.png" id="12_mnkgh"]
[ext_resource type="FontFile" uid="uid://de1qkqpihc3pw" path="res://Fonts/Butler_Regular.otf" id="21_0duj0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cx167"]
texture = ExtResource("2_hcwhg")
modulate_color = Color(0.836755, 0.836755, 0.836755, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5yleq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5yleq"]
bg_color = Color(0.470076, 0.470076, 0.470076, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lthh4"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_elwp8"]
atlas = ExtResource("10_xucoo")
region = Rect2(0, 0, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_h06ok"]
atlas = ExtResource("10_xucoo")
region = Rect2(383, 0, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8j1b"]
atlas = ExtResource("10_xucoo")
region = Rect2(766, 0, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qy1q"]
atlas = ExtResource("10_xucoo")
region = Rect2(1149, 0, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwhxt"]
atlas = ExtResource("10_xucoo")
region = Rect2(1532, 0, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_0duj0"]
atlas = ExtResource("10_xucoo")
region = Rect2(0, 372, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_75jwl"]
atlas = ExtResource("10_xucoo")
region = Rect2(383, 372, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_5opjp"]
atlas = ExtResource("10_xucoo")
region = Rect2(766, 372, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_i28r4"]
atlas = ExtResource("10_xucoo")
region = Rect2(1149, 372, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofows"]
atlas = ExtResource("10_xucoo")
region = Rect2(1532, 372, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdulj"]
atlas = ExtResource("10_xucoo")
region = Rect2(0, 744, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_56jqo"]
atlas = ExtResource("10_xucoo")
region = Rect2(383, 744, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d3m5"]
atlas = ExtResource("10_xucoo")
region = Rect2(766, 744, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cl4t"]
atlas = ExtResource("10_xucoo")
region = Rect2(1149, 744, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_cddsj"]
atlas = ExtResource("10_xucoo")
region = Rect2(1532, 744, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_1higw"]
atlas = ExtResource("10_xucoo")
region = Rect2(0, 1116, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_at5gw"]
atlas = ExtResource("10_xucoo")
region = Rect2(383, 1116, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w0sw"]
atlas = ExtResource("10_xucoo")
region = Rect2(766, 1116, 383, 372)

[sub_resource type="SpriteFrames" id="SpriteFrames_i28r4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_elwp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h06ok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8j1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qy1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwhxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0duj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75jwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5opjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i28r4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofows")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdulj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56jqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d3m5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cl4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cddsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1higw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_at5gw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w0sw")
}],
"loop": true,
"name": &"Crow",
"speed": 3.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_b1nqv"]
atlas = ExtResource("11_ktlje")
region = Rect2(0, 0, 383, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0qex"]
atlas = ExtResource("11_ktlje")
region = Rect2(383, 0, 383, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yka1"]
atlas = ExtResource("11_ktlje")
region = Rect2(766, 0, 383, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyv7g"]
atlas = ExtResource("11_ktlje")
region = Rect2(1149, 0, 383, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gb11"]
atlas = ExtResource("11_ktlje")
region = Rect2(1532, 0, 383, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_4whhi"]
atlas = ExtResource("11_ktlje")
region = Rect2(0, 379, 383, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsud6"]
atlas = ExtResource("11_ktlje")
region = Rect2(383, 379, 383, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1qks"]
atlas = ExtResource("11_ktlje")
region = Rect2(766, 379, 383, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds8lk"]
atlas = ExtResource("11_ktlje")
region = Rect2(1149, 379, 383, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_x82so"]
atlas = ExtResource("11_ktlje")
region = Rect2(1532, 379, 383, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_14h7w"]
atlas = ExtResource("11_ktlje")
region = Rect2(0, 758, 383, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cqpt"]
atlas = ExtResource("11_ktlje")
region = Rect2(383, 758, 383, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4abi"]
atlas = ExtResource("11_ktlje")
region = Rect2(766, 758, 383, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_4svew"]
atlas = ExtResource("11_ktlje")
region = Rect2(1149, 758, 383, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_upfq3"]
atlas = ExtResource("11_ktlje")
region = Rect2(1532, 758, 383, 379)

[sub_resource type="AtlasTexture" id="AtlasTexture_drwmw"]
atlas = ExtResource("11_ktlje")
region = Rect2(0, 1137, 383, 379)

[sub_resource type="SpriteFrames" id="SpriteFrames_ofows"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1nqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0qex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yka1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyv7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gb11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4whhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsud6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1qks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds8lk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x82so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14h7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cqpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4abi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4svew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upfq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drwmw")
}],
"loop": true,
"name": &"Cat",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_mnukg"]
atlas = ExtResource("12_mnkgh")
region = Rect2(0, 0, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_5waks"]
atlas = ExtResource("12_mnkgh")
region = Rect2(383, 0, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh2ck"]
atlas = ExtResource("12_mnkgh")
region = Rect2(766, 0, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_ot7lc"]
atlas = ExtResource("12_mnkgh")
region = Rect2(1149, 0, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_depc5"]
atlas = ExtResource("12_mnkgh")
region = Rect2(1532, 0, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_dssdd"]
atlas = ExtResource("12_mnkgh")
region = Rect2(0, 372, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_lna51"]
atlas = ExtResource("12_mnkgh")
region = Rect2(383, 372, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdiue"]
atlas = ExtResource("12_mnkgh")
region = Rect2(766, 372, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vhfl"]
atlas = ExtResource("12_mnkgh")
region = Rect2(1149, 372, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7csl"]
atlas = ExtResource("12_mnkgh")
region = Rect2(1532, 372, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpk7l"]
atlas = ExtResource("12_mnkgh")
region = Rect2(0, 744, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptk2m"]
atlas = ExtResource("12_mnkgh")
region = Rect2(383, 744, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wui6"]
atlas = ExtResource("12_mnkgh")
region = Rect2(766, 744, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_kma2q"]
atlas = ExtResource("12_mnkgh")
region = Rect2(1149, 744, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef6dv"]
atlas = ExtResource("12_mnkgh")
region = Rect2(1532, 744, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_obhax"]
atlas = ExtResource("12_mnkgh")
region = Rect2(0, 1116, 383, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_wes0k"]
atlas = ExtResource("12_mnkgh")
region = Rect2(383, 1116, 383, 372)

[sub_resource type="SpriteFrames" id="SpriteFrames_tdulj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnukg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5waks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh2ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ot7lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_depc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dssdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lna51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdiue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vhfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7csl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpk7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptk2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wui6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kma2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef6dv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obhax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wes0k")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_5p1lm"]
load_path = "res://.godot/imported/tile_0043.png-e7cf54cc6ebbb8c0ba0c650ca41875cb.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_1igrg"]
load_path = "res://.godot/imported/tile_0045.png-b084935f949e80f18175908166a29e5a.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_v0s1l"]
load_path = "res://.godot/imported/tile_0044.png-99f8d48cc7cbac8c322ce844390393ef.ctex"

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ylpcl")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_cx167")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.5
offset_top = 4.0
offset_right = 183.5
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_5yleq")
theme_override_styles/hover = SubResource("StyleBoxFlat_5yleq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lthh4")
theme_override_styles/normal = SubResource("StyleBoxFlat_lthh4")
text = "Start Game"

[node name="OptionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_5yleq")
theme_override_styles/hover = SubResource("StyleBoxFlat_5yleq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lthh4")
theme_override_styles/normal = SubResource("StyleBoxFlat_lthh4")
text = "Options"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.5
offset_top = -199.0
offset_right = 239.5
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("2_ylpcl")
theme_override_font_sizes/font_size = 100
text = "Mission: Survive"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main Menu BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_cx167")
autoplay = true
bus = &"BGM"

[node name="Button_Pressed_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_dolsu")
volume_db = 9.905
bus = &"SFX"

[node name="Hover_Button" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_n4eug")
volume_db = 0.101

[node name="Credits UI" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Credits UI" type="Control" parent="Credits UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.998424, 1.00208)
metadata/_edit_use_anchors_ = true

[node name="Translucent Black BG" type="Sprite2D" parent="Credits UI/Credits UI"]
modulate = Color(1, 1, 1, 0.105882)
position = Vector2(969.528, 534.89)
scale = Vector2(1, 1)
texture = ExtResource("6_dlksc")

[node name="CREDIT Background" type="Sprite2D" parent="Credits UI/Credits UI"]
position = Vector2(-616.972, 636.678)
scale = Vector2(0.644081, 0.461779)
offset = Vector2(1492, -1358.7)

[node name="BG Sprite" type="Sprite2D" parent="Credits UI/Credits UI/CREDIT Background"]
position = Vector2(2475.06, -196.791)
scale = Vector2(7.49976, 9.49401)
texture = ExtResource("7_hcwhg")

[node name="Credits Info Text" type="Node2D" parent="Credits UI/Credits UI"]
position = Vector2(-1594.51, 790.359)

[node name="Tracy Chiem" type="Label" parent="Credits UI/Credits UI/Credits Info Text"]
offset_left = 2315.65
offset_top = -367.238
offset_right = 2565.65
offset_bottom = -317.238
theme_override_fonts/font = ExtResource("9_elwp8")
theme_override_font_sizes/font_size = 25
text = "Tracy Chiem"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Crow Icon" type="AnimatedSprite2D" parent="Credits UI/Credits UI/Credits Info Text/Tracy Chiem"]
position = Vector2(128.202, -31.9337)
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_i28r4")
animation = &"Crow"
autoplay = "Crow"
frame_progress = 0.0781179

[node name="Credit" type="Label" parent="Credits UI/Credits UI/Credits Info Text/Tracy Chiem"]
layout_mode = 0
offset_left = -4.00605
offset_top = 58.8778
offset_right = 251.994
offset_bottom = 273.878
theme_override_constants/line_spacing = 10
theme_override_font_sizes/font_size = 20
text = "Project Manager
Game Programmer
UI/UX Designer
Game/Level Designer
Music Composer"
horizontal_alignment = 1

[node name="Name2" type="Label" parent="Credits UI/Credits UI/Credits Info Text"]
offset_left = 2075.27
offset_top = -367.238
offset_right = 2325.27
offset_bottom = -317.238
theme_override_fonts/font = ExtResource("9_elwp8")
theme_override_font_sizes/font_size = 25
text = "Name Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cat Icon" type="AnimatedSprite2D" parent="Credits UI/Credits UI/Credits Info Text/Name2"]
position = Vector2(128.202, -31.9337)
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_ofows")
animation = &"Cat"
autoplay = "Cat"

[node name="Name3" type="Label" parent="Credits UI/Credits UI/Credits Info Text"]
offset_left = 2556.03
offset_top = -367.238
offset_right = 2806.03
offset_bottom = -317.238
theme_override_fonts/font = ExtResource("9_elwp8")
theme_override_font_sizes/font_size = 25
text = "Name Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fox Icon" type="AnimatedSprite2D" parent="Credits UI/Credits UI/Credits Info Text/Name3"]
position = Vector2(128.202, -31.9337)
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_tdulj")
autoplay = "default"
frame_progress = 0.311784

[node name="Name4" type="Label" parent="Credits UI/Credits UI/Credits Info Text"]
offset_left = 2796.41
offset_top = -367.238
offset_right = 3046.41
offset_bottom = -317.238
theme_override_fonts/font = ExtResource("9_elwp8")
theme_override_font_sizes/font_size = 25
text = "Name Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CREDIT Title" type="Sprite2D" parent="Credits UI/Credits UI"]
position = Vector2(37.0584, 55.884)
scale = Vector2(0.987699, 0.970507)

[node name="Banner" type="Sprite2D" parent="Credits UI/Credits UI/CREDIT Title"]
position = Vector2(-2227, -1306)
scale = Vector2(5, 5)

[node name="P1" type="Sprite2D" parent="Credits UI/Credits UI/CREDIT Title/Banner"]
position = Vector2(602, 306)
texture = SubResource("CompressedTexture2D_5p1lm")

[node name="P2" type="Sprite2D" parent="Credits UI/Credits UI/CREDIT Title/Banner"]
position = Vector2(666, 306)
texture = SubResource("CompressedTexture2D_1igrg")

[node name="P3" type="Sprite2D" parent="Credits UI/Credits UI/CREDIT Title/Banner"]
position = Vector2(634, 305)
scale = Vector2(1.16, 1)
texture = SubResource("CompressedTexture2D_v0s1l")

[node name="Credits" type="Label" parent="Credits UI/Credits UI/CREDIT Title"]
offset_left = 743.0
offset_top = 165.0
offset_right = 1142.0
offset_bottom = 302.0
theme_override_colors/font_color = Color(0.992157, 0.905882, 0.788235, 1)
theme_override_font_sizes/font_size = 50
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Close_Credits" type="Button" parent="Credits UI/Credits UI"]
offset_left = 1410.22
offset_top = 287.403
offset_right = 1465.22
offset_bottom = 338.403
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.656162, 0, 0.096573, 1)
theme_override_colors/font_color = Color(0.829026, 0.263799, 0.238968, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("21_0duj0")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_5yleq")
theme_override_styles/hover = SubResource("StyleBoxFlat_5yleq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lthh4")
theme_override_styles/normal = SubResource("StyleBoxFlat_lthh4")
text = "x"
icon_alignment = 1

[connection signal="mouse_entered" from="VBoxContainer/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/OptionButton" to="." method="_on_option_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="Credits UI/Credits UI/Close_Credits" to="." method="_on_close_credits_pressed"]
